# auto_capture_tool

./: .gitignore  Auto_Capture_Tool.py  QUICK_START.md  README.md  detect_tcl_tk.py  install.bat  install.ps1  install.py  package-lock.json  pyproject.toml  run_app.bat  run_app.ps1
work_files/: Auto_Capture_Tool.py  CURSOR_PROMPT.md  README.md  install.py  requirements.txt  run_app.bat  run_app.ps1
