[project]
name = "full-screen-shots"
version = "1.0.0"
description = "Auto Full Page Capture Tool - Automated screenshot capture from URLs"
requires-python = ">=3.11"
dependencies = [
    "selenium==4.27.1",
    "webdriver-manager==4.0.2",
    "Pillow==11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
